src/test/ui/error-codes/E0268.stderr
error[E0268]: `break` outside of loop
  --> $DIR/E0268.rs:12:5
   |
12 |     break; //~ ERROR E0268
   |     ^^^^^ cannot break outside of a loop

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0268"
